--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.2",
+    "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.20.0",
     "redux-devtools-extension": "2.13.9",
@@ -15,9 +15,18 @@
     "webpack": "^5.88.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-docs": "^7.2.1",
+    "@storybook/addon-essentials": "^7.2.1",
+    "@storybook/cli": "^7.2.1",
+    "@storybook/react": "^7.2.1",
+    "@storybook/react-webpack5": "^7.2.1",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "gh-pages": "^5.0.0",
+    "storybook": "^7.2.1",
     "typescript": "4.9.5"
   },
   "scripts": {
@@ -26,7 +35,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "storybook": "npx storybook dev -p 6006"
   },
   "browserslist": {
     "production": [
